--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "antd": "^5.6.3",
+    "axios": "^1.4.0",
+    "firebase": "^9.23.0",
+    "firebase-tools": "^12.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
