--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@react-google-maps/api": "^2.18.1",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
