--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.18.1",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "firebase": "^9.23.0",
     "firebase-tools": "^12.4.2",
     "react": "^18.2.0",
